# DailyWeather

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-live.txt
.github/workflows/: tests.yml
docs/: backtesting_engine.md  long_backtest_report.md  operations.md  strategy.md
tests/: test_backtest.py  test_cli.py  test_forecast.py  test_http.py  test_live_setup.py  test_model_validation.py  test_parser.py  test_polymarket.py  test_telonex.py  test_trading_layers.py
tests/fixtures/: weather_markets.json
weather_strategy/: __init__.py  backtest.py  backtest_engine.py  cities.py  cli.py  execution.py  forecast.py  http.py  live_setup.py  long_backtest.py  model_validation.py  models.py  observations.py  paper.py  parser.py  polymarket.py  signals.py  telonex.py  weather.py
